<resources>
    <string name="app_name">Calculator</string>
    <string name="btnSimple">Simple</string>
    <string name="btnAdvanced">Advanced</string>
    <string name="btnAbout">About</string>
    <string name="btnExit">Exit</string>

    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnAdd">+</string>
    <string name="btnSub">-</string>
    <string name="btnMul">*</string>
    <string name="btnDiv">/</string>
    <string name="btnResult">=</string>
    <string name="btnSign">+/-</string>
    <string name="btnClear">C/CE</string>
    <string name="btnDot">.</string>
    
    <string name="btnPi">Pi</string>
    <string name="btnSin">sin</string>
    <string name="btnCos">cos</string>
    <string name="btnTan">tan</string>
    <string name="btnLn">ln</string>
    <string name="btnSqrt">sqrt</string>
    <string name="btnX2">x^2</string>
    <string name="btnXY">x^y</string>
    <string name="btnLog">log</string>

</resources>